query the CVS tree.  For example,

    http://cvs-mirror.mozilla.org/webtools/bonsai/cvsquery.cgi?module=all&branch=HEAD&branchtype=match&dir=mozilla%2Fwebtools%2Fbugzilla&file=&filetype=match&who=&whotype=match&sortby=Date&hours=2&date=week&mindate=&maxdate=&cvsroot=%2Fcvsroot 

will tell you what has been changed in the last week.


2/3/99 Added a new column "initialqacontact" to the components table that gives
an initial QA contact field.  It may be empty if you wish the initial qa
contact to be empty.  If you're not using the QA contact field, you don't need
to add this column, but you might as well be safe and add it anyway:

	alter table components add column initialqacontact tinytext not null;


2/2/99 Added a new column "milestoneurl" to the products table that gives a URL
which is to describe the currently defined milestones for a product.  If you
don't use target milestone, you might be able to get away without adding this
column, but you might as well be safe and add it anyway:

	alter table products add column milestoneurl tinytext not null;


1/29/99 Whoops; had a mispelled op_sys.  It was "Mac System 7.1.6"; it should
be "Mac System 7.6.1".  It turns out I had no bugs with this value set, so I
could just do the below simple command.  If you have bugs with this value, you
may need to do something more complicated.

	alter table bugs change column op_sys op_sys enum("All", "Windows 3.1", "Windows 95", "Windows 98", "Windows NT", "Mac System 7", "Mac System 7.5", "Mac System 7.6.1", "Mac System 8.0", "Mac System 8.5", "AIX", "BSDI", "HP-UX", "IRIX", "Linux", "OSF/1", "Solaris", "SunOS", "OS/2", "other") not null;



1/20/99 Added new fields: Target Milestone, QA Contact, and Status Whiteboard.
These fields are all optional in the UI; there are parameters to turn them on.
However, whether or not you use them, the fields need to be in the DB.  There
is some code that needs them, even if you don't.
